# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------
add_subdirectory(mem)
add_subdirectory(notify)
add_subdirectory(rma_buffer)
add_subdirectory(socket)
add_subdirectory(stream)
add_subdirectory(netdev)
add_subdirectory(transport)
add_subdirectory(transport/device)
add_subdirectory(transport/heterog)
add_subdirectory(transport/host)
add_subdirectory(transport/onesided)
add_subdirectory(transport/onesided/device)
add_subdirectory(dispatcher_ctx)